# remarking

./: .gitignore  .pylintrc  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.cfg
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md
.github/workflows/: ci_and_publish.yml
docs/: generate_examples.py
docs/source/: api.rst  conf.py  examples.rst  extractor_guide.rst  guide.rst  index.rst  usage.rst  writer_command_guide.rst
docs/templates/: examples.md
remarking/: __init__.py  __main__.py  models.py  rmcloud.py
remarking/cli/: app.py  cli.py  common.py  extract.py  list.py  log.py  writer.py  writer_command.py  writer_command_runner.py
remarking/cli/commands/: csv_writer_command.py  json_writer_command.py  md_writer_command.py  table_writer_command.py
remarking/highlight_extractor/: highlight_extractor.py  remarkable_highlight_extractor.py
remarking/storage/: sqlalchemy_storage.py  storage.py
scripts/: autofix  build_docs.py  generate_examples.py  linting  setup_development  typing
scripts/hooks/: pre_push_hook.py
tests/: conftest.py  test_models.py  test_rmcloud.py
tests/cli/: test_app.py  test_cli.py  test_common.py  test_extract.py  test_list.py  test_log.py  test_writer_runner.py
tests/cli/commands/: test_csv_writer_command.py  test_json_writer_command.py  test_md_writer_command.py  test_table_writer_command.py
tests/data/highlights/remarkable_highlight_extractor/test_1/: 1c1b93ec-73db-4dcd-a24c-25971fa6346e.content  1c1b93ec-73db-4dcd-a24c-25971fa6346e.pagedata
tests/data/highlights/remarkable_highlight_extractor/test_1/1c1b93ec-73db-4dcd-a24c-25971fa6346e.highlights/: 1f53c7e3-02b1-4972-847c-2b39faa1f7a6.json  23a495ac-9b72-4add-a11f-bbd3b1ca5e36.json  30ab98c2-16df-4873-8cfd-79cd553acf9d.json  3aea47b4-1e68-4289-a283-cc0656054d0c.json  42ee00ba-29bc-4403-93b6-7a972329cec0.json  47ce09e0-d715-4e69-952e-631b6e38c086.json  f58fddbb-d9f8-43e0-9b6d-656f0a09b997.json
tests/highlight_extractor/: test_remarkable_highlight_extractor.py
tests/storage/: test_sqlalchemy_storage.py
